# gazer

./: .renovaterc.json  Cargo.toml  README.md  rustfmt.toml
src/: build.rs  cli.rs  controller.rs  crd.rs  main.rs
yaml/: example-staticsite.yaml
