[package]
name = "gazer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2"
tokio = { version = "1.14.0", features = ["full"] }
futures = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
schemars = "0.8.8"
kube = { version = "0.64.0", features = ["runtime","derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
