[package]
name = "gazer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2"
tokio = { version = "1.14.0", features = ["full"] }
futures = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
schemars = "0.8.8"
kube = { version = "0.65.0", features = ["runtime","derive","ws"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
git2 = "0.13"
thiserror = "1"
semver = "1"
tokio-util = "0.6"
base64 = "0.13"
